--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+  /* App.css */
+  .diagram-component {
+    width: 400px;
+    height: 400px;
+    border: solid 1px black;
+    background-color: white;
+  }
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
